spock-specs/src/test/resources/snapshots/org/spockframework/smoke/parameterization/InvalidWhereBlocks/using_combined_label_between_derived_data_variable_and_data_pipe_is_not_allowed.txt
Unable to produce AST for this phase due to earlier compilation error:
startup failed:
script.groovy: 5: Derived data variables cannot be combined @ line 5, column 7.
         a = 1
         ^

1 error